app/kubernetes/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hey-api-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hey-api-test-app
  template:
    metadata:
      annotations:
      labels:
        app: hey-api-test-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: hey-api-test
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: hey-api-test-app
      volumes:
        - name: hey-api-test-config-volume
          configMap:
            name: hey-api-test-configmap
      containers:
        - name: hey-api-test-app
          image: europe-west1-docker.pkg.dev/uk-cti-adtech-platform-test/hey-api-test/hey-api-test-app:${GIT_TAG}
          imagePullPolicy: Always
          ports:
            - name: app
              containerPort: 80
          volumeMounts:
            - name: hey-api-test-config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
